# deepagent-deepresearch

./: .env.example  .gitignore  AGENTS.md  README.md  deepagent.db  deepseek_smoke_test.py  evaluate_report.py  frontend-patch.diff  main.py  pyproject.toml  tavily_smoke_test.py
agents/: __init__.py  deep_research.py
api/: database.py  deps.py  main.py  models.py  schemas.py
core/: config.py
docs/: llm_wiki.md
evaluation/: __init__.py  core.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
large_tool_results/: call_00_2VeZT1CFat8YiITE6bJl9017  call_00_31JyOCDElXE8brZmaSGx2784  call_00_7Uyr1wlqNZYQ4iNXecSJ5298  call_00_Ar0vPiNX7MOHVTeszAdZ9218  call_00_BmdiZYLWwczFY6Y42kPs1449  call_00_MAGrvs4UWmLeRWXXcRGr8186  call_00_QZxCGqrCpUYU0wK4Fapb7278  call_00_TnzaXLL8JUQoehoS7LeF6016  call_00_cZF7bNusWbpKTireAS065910  call_00_fKbrDgfaO4fgJSXGxz3n9222  call_00_g9whViuS1aduNl9atRvo1049  call_00_gAsksDPClyRjeVv8zN9x5298  call_00_gOy66qxltERnQO2WTaIl1740  call_00_vgggMDksdgdhTzauTSPD6333  call_00_yFz9Uh2JevYNWUNXGGjb9871  call_01_0KABmWa3dzdg8FxU4zCo2799  call_01_5aArp9pI7cdjiQIGYOIk7202  call_01_6OBBGG5H4ia6SYQXqkN19391  call_01_9J4EtUZSNUCNLvdGITlw9518  call_01_ClNUd2bw8l3Dz3VvY5uU7464  call_01_CuLoBATUnmYNjRTrZpo75657  call_01_DZGQwekdYKOzFXR85ZGy9860  call_01_JUSA9SLP0e82FFHl4W1b6978  call_01_MWSe0AsUn5cGYII3Mo1j7660  call_01_MkV8qo0p7GtjZvTMv36K0604  call_01_W6tHPR5MME7qxENY0Prw0870  call_01_aWNpgfKP0lYCUcOjm4qP1417  call_01_awN1UoXPqVptNehrAkMV3921  call_01_h3BiKC2qJCuZaK1K7QP32631  call_01_kDqCiWVG6c99TOYXmEOw2681  (+31 more)
(+45 files in other folders)
